#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-06-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999924 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Can now install encrypted or non-encrypted BerkeleyDB.

        * New version of Term::Menus paired with this release.


2014-06-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999923 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Using Non-Encrypted version of Berkeley DB.

        * Loading Test::Tester earlier.


2014-06-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999922 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * Updated License to GNU Affero General Public License
          Version 3.0.

        * New version of Term::Menus paired with this release. 
 

2014-06-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999921 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999920 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * New version of Term::Menus paired with this release.


2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999919 released.

        * Updated Makefile.PL for AWS Ubuntu installations.


2014-06-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999918 released.

        * Updated Makefile.PL for AWS Ubuntu installations.

