@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a3d37db803c700443534252a3ebd7861c887c1dc ChangeLog
+SHA1 a95f01c65382b75702db7d084081281db80832f6 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 402ea9c31bf7ecd2bb988bd68509e0f64762b7a8 META.yml
-SHA1 65e655c65e2e590879b498b83f8a803cfa387321 Makefile.PL
+SHA1 24df16b4b24d3740b92fa5e9ec64a8bd878be089 META.yml
+SHA1 635743e76316f818c13d1b7b684f1bc89dca1e7f Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 6f97e7323caa6b5b67c77dd888f88cb74e4f9813 lib/Net/FullAuto.pm
+SHA1 d998ba458e20d3d790764a49b8050e5cb8f9bc20 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTsMjRAAoJEBa/9Pad787EWj4H/jSyeYlZ78K5U7b94TvIJu/c
-3YDN89JKWRhdd4pCdlPQzn9JLeSGY0xMpQ+Luj4+WU0l6r5edvkxpA2wbgeEgjHX
-074vvq2VO5PRi/C6D9pYeHzd59W5uL6XQZEpGYnonT3+x0c2CFne2LxXBtUE7jNx
-ZY9bdvZyaPfrJwDTbPAIsiOB2TT1MPKU7z/brJh+zGa8F1j28VezzGxn5Xc+AlvI
-w1ieaBeaifEnNwNM0eTnKoiN6wiX5ZMLhmNo0iTO9OfBV1D5m5bi2ueKpIJIYfOa
-d8okiSCbm+bcodfcrdmtd+cYvXSaSWSXzIK/toeoVRI9Nqr4nWkmERx5sDBDiqk=
-=s1Pk
+iQEcBAEBAgAGBQJTsVgAAAoJEBa/9Pad787EOgkH/R4lpD93HIo9oGtW4JbSC2tE
++Enh3CRJ2LfXRh5632cuoBN9Y1DZweFhlEVayjWNToV2M+/+2SfJyF5Fa9KSnBHy
+2Aus42FZMRWpJ5l3Oqzh0tBQSRss5y0JNdAsTKRmW32Dg+9PFFw+0G6SWuGZjAh+
+OEZt5/RXJWXtwtj1nGgqAWkpQzqB3j6i8mGCLg8ynyjCj8M5bpyG25m20YTLac5B
+YmWyodwqgA2wAwv+GJ7ECbts3cc+yEFvmjUWQEP51Z7CRvTGcYJLa5tA6ps5NIcy
+tukkV1vCjvNl9fXJFgT4Pk+hNDQcJZNLiV6NwInrEs4SrtH+pmenjg3ZXbodYE4=
+=L3xC
 -----END PGP SIGNATURE-----
