@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999924';
+our $VERSION='0.9999999925';
 
 
 use 5.005;
