@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-06-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9999999925 released.
+
+        * Updated Makefile.PL for AWS Ubuntu installations.
+
+
 2014-06-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9999999924 released.
